[metadata]
name = lifelines
author = Cameron Davidson-Pilon
author_email = cam.davidson.pilon@gmail.com
license = MIT
description = Survival analysis in Python, including Kaplan Meier, Nelson Aalen and regression
keywords = survival, analysis, statistics, data, analysis
url = https://github.com/CamDavidsonPilon/lifelines
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    numpy>=1.14.0
    scipy>=1.2.0
    pandas>=0.23.0
    matplotlib>=3.0
    autograd>=1.3
    autograd-gamma>=0.3
    formulaic>=0.2.2,<0.3
include_package_data = False
python_requires = >=3.6

[options.package_data]
lifelines = datasets/*
